
* Add a shader API.
* Video mode functions are now deprecated. Use shader functions instead.
* Add a function sol.main.get_quest_version() (#1058) by Nate-Devv.
* Add a function sol.main.get_resource_ids() to get the resource lists (#959).
* Add abilities push, grab and pull to game:get/set_ability() (#788).
* Add methods entity:get_property() and entity:set_property() (#1094).
* Add methods entity:get_layer() and entity:set_layer().
* Add methods enemy:get/set_attacking_collision_mode() (#1066).
* Add a method sprite:get_frame_src_xy() (#1093).
* sprite:get_num_frames() can now optionally take an animation and direction.
* sprite:get_frame_delay() can now optionally take an animation.
* sprite:get_size() can now optionally take an animation and direction.
* sprite:get_origin() can now optionally take an animation and direction.
* Add method get_angle() to more movement types (#1122) by stdgregwar.

Data files format changes
-------------------------

* Maps: add support of custom properties for entities (#1094).
* Tilesets: add support of border sets (autotiles) (#1069).
* Make the tileset entities image optional (#884).

___________________________

Solarus 1.5.3 (2016-04-01)
__________________________

* Speed up loading maps by keeping tilesets in a cache (#1019).
* Fix text_surface:set_horizontal/vertical_alignment() not working.
* Fix parallax dynamic tiles still displayed when disabled or invisible.
* Improve error message of non-square tile patterns with diagonal obstacles.

__________________________

Solarus 1.5.1 (2016-11-29)
__________________________

Engine changes
--------------

* Add Spanish translation of the launcher GUI (thanks Diarandor!).
* Fix registering quest to the launcher at quest install time (#948).
* Fix crash when a carried bomb explodes (#953).
* Fix crash when a scrolling teletransporter is incorrectly placed (#977).
* Fix crash when an entity has a wrong savegame variable type (#1008).