@@ -878,6 +878,8 @@ class LuaContext {
       entity_api_get_state,
       entity_api_get_property,
       entity_api_set_property,
+      entity_api_get_properties,
+      entity_api_set_properties,
       hero_api_teleport,
       hero_api_get_direction,
       hero_api_set_direction,
