@@ -32,5 +32,26 @@ function map:on_started()
   sensor_1:set_property("other", nil)
   assert_equal(sensor_1:get_property("other"), nil)
 
+  -- Test properties table.
+  local properties = sensor_1:get_properties()
+  assert_equal(#properties, 2)
+  check_property(properties[1].key, properties[1].value, "my_prop", "new_val")
+  check_property(properties[2].key, properties[2].value, "a_new_one", "hello")
+
+  sensor_1:set_properties({})
+  properties = sensor_1:get_properties()
+  assert_equal(#properties, 0)
+
+  sensor_1:set_properties({
+    { key = "brand_new_prop", value = "a_great_value" },
+    { key = "prop_2", value = "a_great_value" },
+    { key = "prop_3", value = "" },
+  })
+  properties = sensor_1:get_properties()
+  assert_equal(#properties, 3)
+  check_property(properties[1].key, properties[1].value, "brand_new_prop", "a_great_value")
+  check_property(properties[2].key, properties[2].value, "prop_2", "a_great_value")
+  check_property(properties[3].key, properties[3].value, "prop_3", "")
+
   sol.main.exit()
 end
