@@ -39,6 +39,7 @@ Changes that do not introduce incompatibilities:
 * Add a function sol.main.get_resource_ids() to get the resource lists (#959).
 * Add abilities push, grab and pull to game:get/set_ability() (#788).
 * Add methods entity:get_property() and entity:set_property() (#1094).
+* Add methods entity:get_properties() and entity:set_properties() (#1144).
 * Add methods entity:get_layer() and entity:set_layer().
 * Add methods enemy:get/set_attacking_collision_mode() (#1066).
 * Add a method sprite:get_frame_src_xy() (#1093).
